--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.3.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
