--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.3.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
+    "styled-components": "^6.1.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
